@@ -54,6 +54,7 @@ remove = File::Copy
 
 ; optional for tests
 remove = Acme::Alien::DontPanic
+remove = FFI::Platypus
 
 [PruneFiles]
 match = /tmpbuild\.
