@@ -1,6 +1,9 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Make FFI::Platypus an optional testing dependency
+    (previously it was a required dependency for testing
+    only).
 
 0.11      2018-12-20 21:55:50 -0700
   - Require EUMM 7.24 for fixes in testing
